// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`request given single body param should translate to request with body 1`] = `
Object {
  "body": Object {
    "in": "body",
    "name": "param",
  },
  "cookie": Array [],
  "headers": Array [],
  "path": Array [],
  "query": Array [],
}
`;

exports[`request given single form param should translate to request with form 1`] = `
Object {
  "body": Object {
    "in": "formData",
    "name": "param",
    "type": "number",
  },
  "cookie": Array [],
  "headers": Array [],
  "path": Array [],
  "query": Array [],
}
`;

exports[`request given single header param should translate to request with header 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [
    Object {
      "in": "header",
      "name": "param",
    },
  ],
  "path": Array [],
  "query": Array [],
}
`;

exports[`request given single path param should translate to request with path 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [],
  "path": Array [
    Object {
      "in": "path",
      "name": "param",
      "required": true,
    },
  ],
  "query": Array [],
}
`;

exports[`request given single query param should translate to request with query 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [],
  "path": Array [],
  "query": Array [
    Object {
      "in": "query",
      "name": "param",
    },
  ],
}
`;

exports[`request given two header params should translate 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [
    Object {
      "in": "header",
      "name": "param",
    },
  ],
  "path": Array [],
  "query": Array [],
}
`;

exports[`request given two path params should translate 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [],
  "path": Array [
    Object {
      "in": "path",
      "name": "param",
      "required": true,
    },
  ],
  "query": Array [],
}
`;

exports[`request given two query params should translate 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [],
  "path": Array [],
  "query": Array [
    Object {
      "in": "query",
      "name": "param",
    },
  ],
}
`;

exports[`request should translate mixed request 1`] = `
Object {
  "body": Object {
    "in": "formData",
    "name": "param",
    "type": "number",
  },
  "cookie": Array [],
  "headers": Array [],
  "path": Array [],
  "query": Array [],
}
`;
